--- a/packages/public-client/src/app/components/shared/icon-card/icon-card.component.scss
+++ b/packages/public-client/src/app/components/shared/icon-card/icon-card.component.scss
@@ -12,17 +12,32 @@
 
   border-radius: 1rem;
   box-shadow: 1px 1px 4px 0px utility.$dive-black;
+  &:hover {
+    box-shadow: 3px 3px 6px 0px utility.$dive-black;
+  }
+  &:active {
+    box-shadow: 0px 0px 2px 0px utility.$dive-black;
+  }  
 
   .icon-container {
     @extend %FlexCenter;
+    margin-bottom: 1.15vw;
     
+    $imgSize: 5vw;
     svg {
-      max-width: 4vw;
+      max-width: $imgSize;
+      max-height: $imgSize;
     }
   }
 
-  .text-space {
+  .text-container {
     @extend %FlexCenter;
     flex-direction: column;
+    font-size: 1.25vw;
+    white-space: nowrap;
+    text-shadow: 1px 1px 2px utility.$dive-black;
+    .large {
+      font-size: 2vw;
+    }
   }
 }
