--- a/packages/public-client/src/app/components/shared/icon-card/icon-card.component.scss
+++ b/packages/public-client/src/app/components/shared/icon-card/icon-card.component.scss
@@ -12,12 +12,13 @@
 
   border-radius: 1rem;
   box-shadow: 1px 1px 4px 0px utility.$dive-black;
+  transition: box-shadow 0.25s ease;
   &:hover {
     box-shadow: 3px 3px 6px 0px utility.$dive-black;
   }
   &:active {
     box-shadow: 0px 0px 2px 0px utility.$dive-black;
-  }  
+  }
 
   .icon-container {
     @extend %FlexCenter;
