--- a/packages/public-client/src/app/components/pages/home/home.component.scss
+++ b/packages/public-client/src/app/components/pages/home/home.component.scss
@@ -141,11 +141,18 @@ $verticalGap: 0.75rem;
             font-size: 4vw;
             @include utility.media-breakpoint-gte(sm) {
               font-size: 3.5vw;
-            }
-            @include utility.text-double-outline('Local Events Live Sports & Games');
-
-            span {
-              //margin: 0 1.25rem;
+            }            
+            span {              
+              display: inline-block;
+              @include utility.text-double-outline('Local Events');
+              &:nth-of-type(2) {
+                @include utility.text-double-outline('Live Sports');
+                margin: 0 -1.35rem 0 0;
+              }
+              &:nth-of-type(3) {
+                @include utility.text-double-outline('& Games');
+                margin: 0 -2.65rem 0 0;                
+              }
             }
           }          
         } // end intro
