storybook and mouse-facer-card

--- a/packages/public-client/src/app/components/pages/home/home.component.html
+++ b/packages/public-client/src/app/components/pages/home/home.component.html
@@ -84,44 +84,35 @@
   </div>
 </div>
 
-<div class="mouse-facer-container">
-  <app-mouse-facer class="main-room" imgSrc="../../../../assets/images/inside/Interiors_251.jpg"></app-mouse-facer>
-  <div class="info main">
-    <div>
-      <h2>Charters</h2>
-      <p>Reserve the boat or a room for your private party</p>
-    </div>
-  </div>
-</div>
+<app-mouse-facer-card
+  title="Charters"
+  description="Reserve the boat or a room for your private party"
+  imgUrl = "../../../../assets/images/inside/Interiors_251.jpg"
+  textPosition = ""
+></app-mouse-facer-card>
 
 <div class="bottom-separator">
   <ng-container *ngTemplateOutlet="CompassSvg"></ng-container>
 </div>
 
-<div class="mouse-facer-container">
-  <app-mouse-facer class="dive-shop" imgSrc="../../../../assets/images/inside/Interiors_290.jpg"></app-mouse-facer>
-  <div class="info shop">
-    <div>
-      <h2>Dive Shop</h2>
-      <p>Exclusive shirts, hats, hoodies & more</p>
-    </div>
-  </div>
-</div>
+<app-mouse-facer-card
+  title="Dive Shop"
+  description="Exclusive shirts, hats, hoodies & more"
+  imgUrl = "../../../../assets/images/inside/Interiors_290.jpg"
+  textPosition = ""
+></app-mouse-facer-card>
 
 <!-- <img class="sextant-separator" src="assets/images/sextant.svg" /> -->
 <div class="sextant-separator">
   <ng-container *ngTemplateOutlet="SextantSvg"></ng-container>
 </div>
 
-<div class="mouse-facer-container">
-  <app-mouse-facer class="patios" imgSrc="../../../../assets/images/home/Interiors_165.jpg"></app-mouse-facer>
-  <div class="info patios">
-    <div>
-      <h2>Wide Open</h2>
-      <p>3 garage doors that<br>open onto 3 patios</p>
-    </div>
-  </div>
-</div>
+<app-mouse-facer-card
+  title="Wide Open"
+  description="3 garage doors that<br>open onto 3 patios"
+  imgUrl = "../../../../assets/images/home/Interiors_165.jpg"
+  textPosition = ""
+></app-mouse-facer-card>
 
 <div class="anchor-separator-bottom">
   <img src="assets/images/filigree.svg">  
