refactor into components / modules heirarchy

--- a/packages/public-client/src/app/components/pages/_parts/site-footer/site-footer.component.html
+++ b/packages/public-client/src/app/components/pages/_parts/site-footer/site-footer.component.html
@@ -1,3 +1,4 @@
+<div class="waves-separator footer"></div>
 <footer>
   <div class="social-icons">
     <!-- NOTE: mis-named so blockers don't filter -->
