--- a/packages/public-client/src/app/components/pages/_parts/site-header/site-header.component.html
+++ b/packages/public-client/src/app/components/pages/_parts/site-header/site-header.component.html
@@ -1,1 +1,5 @@
-<p>site-header works!</p>
+<header>
+  <img [ngClass]="{'showLogo': showLogo}" src="../../../../assets/images/logoLg.png">
+  <app-site-nav></app-site-nav>
+  <!-- <div class="boat-cam"><span>boat cam</span></div> -->
+</header>
