--- a/packages/public-client/src/app/components/pages/inside/inside.component.html
+++ b/packages/public-client/src/app/components/pages/inside/inside.component.html
@@ -1,8 +1,6 @@
-<h1>What's Inside</h1>
-<a routerLink="/home">Home Page</a>
-
-<app-album-display
-  title="Test Title"
-  description="Test Description"
-  [imageUrls]="albumImageUrls"
-></app-album-display>
+<app-site-page>
+  <h1>We're still building...</h1>
+  <p>10 years wasn't quite long enough.</p>
+  <p>For now, please see our <a href="https://www.facebook.com/diveinndenver" target="_blank">Facebook page</a> for updates on events, specials, and all the Dive Inn happenings.</p>
+  <p>FB LINK / IMG</p>
+</app-site-page>
