--- a/packages/shared/scss/_controls.scss
+++ b/packages/shared/scss/_controls.scss
@@ -9,31 +9,32 @@ a {
   color: colors.$dive-yellow;
   $c1: colors.$dive-yellow;
   $len: 5px;
-  &::after {
-    position: absolute;
-    content: '';
-    width: 100%;
-    height: 10px;
-    left: 0;
-    bottom: 0;    
-    background-image:
-        radial-gradient(2px circle at 50% 50%, $c1 50%, transparent 50.5%, transparent 8px);
-        //radial-gradient(5px circle, $c1 1.25px, rgba(255,255,255,0) 2.5px),
-        //radial-gradient(5px circle at 2.5px, $c1 1.25px, rgba(255,255,255,0) 2.5px),
-        //radial-gradient(5px circle, $c1 1.25px, rgba(255,255,255,0) 2.5px);
-    background-position: bottom;
-    background-size: 16px 6px;
-    background-repeat: repeat-x;
+  $containerHeight: 0.25em;
+  $dotHeight: 0.125em;
+  $dotGap: 0.75em;
+  $lineHeight: 0.01em;
 
-    transition: background-size 0.21s ease;
+  &::after {
+    content: '';
+    position: absolute;
+    bottom: -0.05em;
+    width: 100%;
+    min-height: $containerHeight;
+    left: 0;
+    display: flex;
+    align-items: center;
+    background-image: radial-gradient(0.1em circle at 50% 50%, $c1 50%, transparent 50.5%, transparent 100%);
+    background-position: -1em bottom;
+    background-size: $dotGap $dotHeight;
+    background-repeat: repeat-x;
+    opacity: 0.25;
+    transition: all 0.2s ease;
   }
-  &:hover, &:focus {
-    //text-decoration: underline;
-    // background-image:
-    //     radial-gradient(15px 15px ellipse at 0px 0px, $c1 50%, transparent 50.5%);
-    &::after {
-      background-size: 1px 1px;
-    // background-position: bottom;
+  &:hover, &:focus {    
+    &::after {      
+      background-size: 0.01em $lineHeight;
+      background-position: bottom;
+      opacity: 1;
     }
   }
 }
