--- a/packages/public-client/src/app/components/shared/mouse-facer-card/mouse-facer-card.component.html
+++ b/packages/public-client/src/app/components/shared/mouse-facer-card/mouse-facer-card.component.html
@@ -1,9 +1,12 @@
-<div class="mouse-facer-container">
-  <app-mouse-facer class="main-room"></app-mouse-facer>
-  <div class="info main">
-    <div>
-      <h2>{{ title }}</h2>
-      <p>{{ description }}</p>
-    </div>
+<app-mouse-facer [imgSrc]="imgUrl"></app-mouse-facer>
+<div class="text-container"
+  [class.top-left]="textPosition === MouseFacerTextPositionsEnum.TOP_LEFT"
+  [class.top-right]="textPosition === MouseFacerTextPositionsEnum.TOP_RIGHT"
+  [class.bottom-left]="textPosition === MouseFacerTextPositionsEnum.BOTTOM_LEFT"
+  [class.bottom-right]="textPosition === MouseFacerTextPositionsEnum.BOTTOM_RIGHT"
+>
+  <div class="text-content">
+    <h2 [attr.card-title]="text">{{ title }}</h2>
+    <p>{{ description }}</p>
   </div>
 </div>
