--- a/packages/shared/scss/_mixins.scss
+++ b/packages/shared/scss/_mixins.scss
@@ -12,7 +12,7 @@
   z-index: 0;
   color: $colorText;
   -webkit-text-stroke: 0.05em $colorOutline1;
-  &:after {
+  &::after {
     position: absolute;
     content: $text;
     -webkit-text-stroke: 0.15em $colorOutline2;
